--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
+    "lodash": "^4.17.21",
     "natural": "^8.0.1",
     "openai": "^4.78.1",
     "react": "^18.3.1",
